test/spec/call_indirect.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/call_indirect.wast
(;; STDOUT ;;;
out/test/spec/call_indirect.wast:527: assert_malformed passed:
  out/test/spec/call_indirect/call_indirect.1.wat:1:122: error: unexpected token "param", expected an expr.
  ...indirect (type $sig) (result i32) (param i32)    (i32.const 0) (i32.const ...
                                        ^^^^^
  out/test/spec/call_indirect/call_indirect.1.wat:1:166: error: unexpected token ), expected EOF.
  ...irect (type $sig) (result i32) (param i32)    (i32.const 0) (i32.const 0)  ))
                                                                                 ^
out/test/spec/call_indirect.wast:539: assert_malformed passed:
  out/test/spec/call_indirect/call_indirect.2.wat:1:109: error: unexpected token "type", expected an expr.
  ... i32)  (call_indirect (param i32) (type $sig) (result i32)    (i32.const 0...
                                        ^^^^
  out/test/spec/call_indirect/call_indirect.2.wat:1:166: error: unexpected token ), expected EOF.
  ...irect (param i32) (type $sig) (result i32)    (i32.const 0) (i32.const 0)  ))
                                                                                 ^
out/test/spec/call_indirect.wast:551: assert_malformed passed:
  out/test/spec/call_indirect/call_indirect.3.wat:1:122: error: unexpected token "type", expected an expr.
  ...indirect (param i32) (result i32) (type $sig)    (i32.const 0) (i32.const ...
                                        ^^^^
  out/test/spec/call_indirect/call_indirect.3.wat:1:166: error: unexpected token ), expected EOF.
  ...irect (param i32) (result i32) (type $sig)    (i32.const 0) (i32.const 0)  ))
                                                                                 ^
out/test/spec/call_indirect.wast:563: assert_malformed passed:
  out/test/spec/call_indirect/call_indirect.4.wat:1:110: error: unexpected token "type", expected an expr.
  ...i32)  (call_indirect (result i32) (type $sig) (param i32)    (i32.const 0)...
                                        ^^^^
  out/test/spec/call_indirect/call_indirect.4.wat:1:166: error: unexpected token ), expected EOF.
  ...irect (result i32) (type $sig) (param i32)    (i32.const 0) (i32.const 0)  ))
                                                                                 ^
out/test/spec/call_indirect.wast:575: assert_malformed passed:
  out/test/spec/call_indirect/call_indirect.5.wat:1:110: error: unexpected token "param", expected an expr.
  ...i32)  (call_indirect (result i32) (param i32) (type $sig)    (i32.const 0)...
                                        ^^^^^
  out/test/spec/call_indirect/call_indirect.5.wat:1:166: error: unexpected token ), expected EOF.
  ...irect (result i32) (param i32) (type $sig)    (i32.const 0) (i32.const 0)  ))
                                                                                 ^
out/test/spec/call_indirect.wast:587: assert_malformed passed:
  out/test/spec/call_indirect/call_indirect.6.wat:1:67: error: unexpected token "param", expected an expr.
  ...t i32)  (call_indirect (result i32) (param i32) (i32.const 0) (i32.const 0)))
                                          ^^^^^
  out/test/spec/call_indirect/call_indirect.6.wat:1:106: error: unexpected token ), expected EOF.
  ...t i32)  (call_indirect (result i32) (param i32) (i32.const 0) (i32.const 0)))
                                                                                 ^
out/test/spec/call_indirect.wast:597: assert_malformed passed:
  out/test/spec/call_indirect/call_indirect.7.wat:1:46: error: unexpected token $x, expected ).
  ...e 0 anyfunc)(func (call_indirect (param $x i32) (i32.const 0) (i32.const 0)))
                                             ^^
  out/test/spec/call_indirect/call_indirect.7.wat:1:82: error: unexpected token ), expected EOF.
  ...e 0 anyfunc)(func (call_indirect (param $x i32) (i32.const 0) (i32.const 0)))
                                                                                 ^
out/test/spec/call_indirect.wast:604: assert_malformed passed:
  out/test/spec/call_indirect/call_indirect.8.wat:1:57: error: expected 0 results, got 1
  ...0 anyfunc)(func (result i32)  (call_indirect (type $sig) (result i32) (i32...
                                    ^^^^^^^^^^^^^
out/test/spec/call_indirect.wast:614: assert_malformed passed:
  out/test/spec/call_indirect/call_indirect.9.wat:1:82: error: expected 1 arguments, got 0
  ...0 anyfunc)(func (result i32)  (call_indirect (type $sig) (result i32) (i32...
                                    ^^^^^^^^^^^^^
out/test/spec/call_indirect.wast:624: assert_malformed passed:
  out/test/spec/call_indirect/call_indirect.10.wat:1:69: error: expected 1 results, got 0
  ...i32)))(table 0 anyfunc)(func  (call_indirect (type $sig) (param i32) (i32....
                                    ^^^^^^^^^^^^^
out/test/spec/call_indirect.wast:634: assert_malformed passed:
  out/test/spec/call_indirect/call_indirect.11.wat:1:86: error: expected 2 arguments, got 1
  ...0 anyfunc)(func (result i32)  (call_indirect (type $sig) (param i32) (resu...
                                    ^^^^^^^^^^^^^
out/test/spec/call_indirect.wast:649: assert_invalid passed:
  error: found call_indirect operator, but no table
  000001c: error: OnCallIndirectExpr callback failed
out/test/spec/call_indirect.wast:657: assert_invalid passed:
  error: type mismatch in i32.eqz, expected [i32] but got []
  0000023: error: OnConvertExpr callback failed
out/test/spec/call_indirect.wast:665: assert_invalid passed:
  error: type mismatch in i32.eqz, expected [i32] but got [i64]
  0000027: error: OnConvertExpr callback failed
out/test/spec/call_indirect.wast:674: assert_invalid passed:
  error: type mismatch in call_indirect, expected [i32] but got []
  0000026: error: OnCallIndirectExpr callback failed
out/test/spec/call_indirect.wast:682: assert_invalid passed:
  error: type mismatch in call_indirect, expected [f64, i32] but got []
  0000027: error: OnCallIndirectExpr callback failed
out/test/spec/call_indirect.wast:690: assert_invalid passed:
  error: type mismatch in function, expected [] but got [i32]
  0000025: error: EndFunctionBody callback failed
out/test/spec/call_indirect.wast:698: assert_invalid passed:
  error: type mismatch in function, expected [] but got [f64, i32]
  000002e: error: EndFunctionBody callback failed
out/test/spec/call_indirect.wast:709: assert_invalid passed:
  error: type mismatch in call_indirect, expected [i32] but got []
  0000027: error: OnCallIndirectExpr callback failed
out/test/spec/call_indirect.wast:717: assert_invalid passed:
  error: type mismatch in call_indirect, expected [i32] but got [... i64]
  0000028: error: OnCallIndirectExpr callback failed
out/test/spec/call_indirect.wast:726: assert_invalid passed:
  error: type mismatch in call_indirect, expected [i32, i32] but got [i32]
  000002a: error: OnCallIndirectExpr callback failed
out/test/spec/call_indirect.wast:736: assert_invalid passed:
  error: type mismatch in call_indirect, expected [i32, i32] but got [i32]
  000002a: error: OnCallIndirectExpr callback failed
out/test/spec/call_indirect.wast:746: assert_invalid passed:
  error: type mismatch in call_indirect, expected [i32, f64] but got [f64, i32]
  0000032: error: OnCallIndirectExpr callback failed
out/test/spec/call_indirect.wast:756: assert_invalid passed:
  error: type mismatch in call_indirect, expected [f64, i32] but got [i32, f64]
  0000032: error: OnCallIndirectExpr callback failed
out/test/spec/call_indirect.wast:770: assert_invalid passed:
  0000021: error: invalid call_indirect signature index
out/test/spec/call_indirect.wast:777: assert_invalid passed:
  0000025: error: invalid call_indirect signature index
out/test/spec/call_indirect.wast:788: assert_invalid passed:
  error: invalid func_index: 0 (max 0)
  0000018: error: OnElemSegmentFunctionIndex callback failed
138/138 tests passed.
;;; STDOUT ;;)
